--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>SVGUID Avatar Generator</h1>
-            <p class="subtitle">Create unique identicon avatars based on identifiers</p>
+            <h1>Avatarverse  </h1>
+            <p class="subtitle">Crie avatares identicon exclusivos com base em identificadores.</p>
         </header>
         
         <div class="main-content">
@@ -65,7 +65,7 @@
         </div>
         
         <footer>
-            <p>Inspired by Multiavatar • Based on svguid project</p>
+            <p>Projeto A3 - Computação Grárica</p>
         </footer>
     </div>
 
